@@ -1,12 +1,11 @@
-FROM maven:3.6.1-jdk-11-slim as maven
+FROM maven:3.9.0-eclipse-temurin-17
 WORKDIR /kooby
 COPY pom.xml pom.xml
 COPY src src
 COPY public public
+COPY conf conf
 RUN mvn package -q
 
-FROM openjdk:11.0.3-jdk-slim
-WORKDIR /kooby
-COPY --from=maven /kooby/target/kooby.jar app.jar
-COPY conf conf
-CMD ["java", "-server", "-Xms4g", "-Xmx4g", "-XX:+AggressiveOpts", "-XX:-UseBiasedLocking", "-XX:+UseStringDeduplication", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-jar", "app.jar"]
+EXPOSE 8080
+
+CMD ["java", "-server", "-Xms2g", "-Xmx2g", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-Dio.netty.disableHttpHeadersValidation=true", "-Dio.netty.buffer.checkBounds=false", "-Dio.netty.buffer.checkAccessible=false", "-jar", "target/kooby.jar"]
